<resources>
    <string name="app_name">check</string>
    <string name="action_settings">Settings</string>
    <string name="date">3/1 ~ 3/31</string>
    <string name="Book">帳本</string>
    <string name="bookmanage">帳本管理</string>
    <string name="clothes">衣：10%</string>
    <string name="other">其他圖表</string>
    <string name="otherthing">其他：25%</string>
    <string name="traffic">交通：15%</string>
    <string name="amusement">娛樂：10%</string>
    <string name="food">食：40%</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="button3">Button</string>
    <string name="button7">Button</string>
    <string name="button8">Button</string>
</resources>
